# pepakura-next

./: .env.development  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .tool-versions  PNX.pnx  README.md  ShowProjectStructure.ps1  audit-pepakura.ps1  benchmark_report_low.json  debug_report.txt  env.d.ts  fix-and-run-pepakura.ps1  fix-mainrs.ps1  full_workflow_test.ps1  index.html  init.ps1  install.ps1  migrate_files.ps1  migrate_to_new_structure.ps1  package-lock.json  package.json  pepakura-unfold-architecture.md  pnpm-lock.yaml  pnpm-workspace.yaml  run-pepakura.bat  run-pepakura.ps1  run_debug.ps1  run_services.ps1  run_services_fixed.ps1  setup-monorepo.ps1  setup.ps1  test.mtl  test_full_workflow.ps1  test_workflow.ps1  test_workflow_fixed.ps1  tsconfig.json  (+3 more)
.sourcecraft/: ci.yaml
addons/: addon_server.py
ai_engine/: main.py
api_gateway/: Cargo.toml
api_gateway/src/: main.rs
backend/genai-platform/: Cargo.toml
backend/genai-platform/crates/core/: Cargo.toml
backend/genai-platform/crates/core/src/: d3.rs  image.rs  lib.rs  model.rs  text.rs
backend/genai-platform/crates/gateway/: Cargo.toml
backend/genai-platform/crates/gateway/src/: main.rs
config/: env.json
core/: Cargo.toml
core/src/: engine.rs  errors.rs  lib.rs  types.rs
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx
frontend/src/components/: DragDropUpload.tsx
frontend/web/electron-app/: main.js  package-lock.json  package.json  preload.js
frontend/web/vue-app/: package-lock.json  package.json  vite.config.js
frontend/web/vue-app/src/: App.vue  main.js  mockProjects.js
frontend/web/vue-app/src/components/: GalleryPage.vue  ModelViewerPage.vue  PromptEditorPage.vue  SettingsPage.vue  Sidebar.vue
frontend/web/vue-app/src/locales/: en.json  ru.json
frontend/web/vue-app/src/router/: index.js
scripts/: install-ollama-windows.ps1
scripts/utils/: check_services.ps1  diagnose_unfolding_core.ps1
shared/: package.json
shared/src/: index.ts
shared/src/components/: ModelViewer.vue  PepakuraLayout.vue
shared/src/composables/: useImportExport.ts  useModelLoader.ts  useModelStats.ts  useModelViewer.ts  useNotifications.ts  useSearch.ts  useThreeJsScene.ts  useUIControls.ts
shared/src/types/: model.ts
src/: App.vue  main.ts  test-typescript.ts
src-tauri/: tauri.conf.json
src/assets/styles/: main.css
src/backend/ai-gateway/: main.py  requirements.txt
src/backend/unfolding-core/: Cargo.toml
src/backend/unfolding-core/benches/: unfolding_benchmarks.rs
src/backend/unfolding-core/src/: lib.rs  main.rs
src/components/examples/: ExampleWithLoading.vue
src/components/layout/: AppHeader.vue
src/components/ui/: AppLoading.vue  Button.vue  Input.vue  index.ts
src/core/services/storage/: appPreferences.storage.ts
src/core/services/theme/: theme.service.ts
src/modules/ai-service/: config.ts  ollamaClient.ts
src/router/: index.ts  index.ts.backup
src/stores/: ai.store.ts
src/styles/: main.css
src/views/: EditorView.vue  HomeView.vue  NotFoundView.vue  SettingsView.vue  TestLoadingView.vue  TutorialView.vue
ui-desktop/: _search_mode.txt  _search_stub.txt  index.html  package.json
ui-desktop/public/models/: model.mtl
ui-desktop/src/: App.vue  index.html  main.ts  style.css
ui-desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
ui-desktop/src-tauri/capabilities/: devtools.json
ui-desktop/src-tauri/icons/: icon.icns
ui-desktop/src-tauri/output/: model.stl
ui-desktop/src-tauri/src/: export.rs  export_3d.rs  export_pdf.rs  export_svg.rs  lib.rs  main.rs  model_loader.rs  models.rs  render.rs  test_export.rs
ui-desktop/src-tauri/src/unfold/: engine.rs  face_unfolder.rs  layout_optimizer.rs  mod.rs  optimizer.rs  types.rs
ui-desktop/src/components/layout/: AppMainLayout.vue  AppShell.vue  LeftToolbar.vue  ModelViewer.vue  QuickActionsPanel.vue  RecentProjectsPanel.vue  RightPanel.vue  Scene3D.vue  SimpleStepperHeader.vue  StatusBar.vue  TopBar.vue  ViewerSection.vue
ui-desktop/src/components/stages/: ThreeDStage.vue  TwoDStage.vue  TxtStage.vue  UnfoldStage.vue
ui-desktop/src/components/ui/: ContextMenu.vue  GlobalMessages.vue
ui-desktop/src/components/viewer/: LogPane.vue  ThreeDViewerCanvas.vue  ViewerPane.vue
ui-desktop/src/composables/: useGenaiClient.ts  useImport3DModel.ts  useTauriModelLoader.ts
ui-desktop/src/pages/: EditorPage.vue  SettingsPage.vue  WelcomePage.vue
ui-desktop/src/stores/: UnfoldStage.vue  project.store.ts  project.ts  ui.ts  unfoldStore.ts
ui-desktop/src/styles/: main.css
ui-desktop/src/views/: HomeView.vue
ui-web/: index.html  package.json  vite.config.ts
ui-web/src/: App.vue  main.ts  style.css
web/: index.js
