[package]
name = "pepakura_gateway"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "api_gateway"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
