[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.83"
once_cell = "1.21.3"
parking_lot = "0.12.5"
petgraph = { version = "0.8.3", features = ["serde"] }
wasm-bindgen = { version = "0.2.106", features = ["serde-serialize"] }
web-sys = { version = "0.3.83", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
