[package]
name = "pepakura-next"
version = "0.1.0"
description = "Pepakura Next Desktop Tauri app"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[lib]
name = "pepakura_next"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2.9.5", features = ["wry"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.7"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
