[package]
name = "pepakura-next"
version = "0.1.0"
edition = "2021"

[dependencies]
tobj = "4.0.3"
nalgebra = "0.33"
image = "0.24"
clap = { version = "4.0", features = ["derive"] }
tauri = { version = "2.9.5", features = ["wry"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.8.2"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[features]
default = []
