[package]
name = "pepakura-unfolding-core"
version = "0.1.0"
edition = "2021"
description = "High-performance 3D mesh unfolding core with SIMD optimizations"
license = "Apache-2.0"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/pepakura-unfolding-core"
documentation = "https://docs.rs/pepakura-unfolding-core"
readme = "README.md"
keywords = ["3d", "mesh", "unfolding", "papercraft", "geometry"]
categories = ["graphics", "science", "multimedia::3d"]

[features]
default = ["server", "parallel"]
server = ["axum", "tokio", "tower", "tracing-subscriber", "dep:tracing"]  # Добавлен dep:tracing
parallel = ["rayon"]
simd = ["packed_simd"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
tracing = ["dep:tracing"]  # Добавлен dep:tracing

[dependencies]
# Web framework (optional via feature)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tower = { version = "0.4", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Math and linear algebra
nalgebra = { version = "0.32", features = ["proptest-support"] }
rayon = { version = "1.8", optional = true }

# Logging and tracing
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# SIMD optimizations
packed_simd = { version = "0.3", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# CLI dependencies (for binary targets)
clap = { version = "4.4", optional = true }
config = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"

# Optimized profiles
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
incremental = false
debug = false