[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

